Closed
Bug 201412
Opened 23 years ago
Closed 23 years ago
Uninstaller crashes removing pathtoexe entry
Categories
(Core Graveyard :: Installer: GRE, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: carosendahl, Assigned: ssu0262)
Details
(Keywords: topembed+, Whiteboard: [adt2])
Attachments
(2 files, 3 obsolete files)
|
1.03 KB,
application/x-zip-compressed
|
Details | |
|
8.36 KB,
patch
|
jag+mozilla
:
review+
jag+mozilla
:
superreview+
jag+mozilla
:
approval1.4+
|
Details | Diff | Splinter Review |
1. Pull down two different versions of the GRE installer
2. Unzip the attached test case and set the environment variables correctly
3. Run setenv.bat and the 030GREInstall.bat
expected result: C:\foo.txt pathtoexe entry is removed
actual result: crash.
| Reporter | ||
Updated•23 years ago
|
| Reporter | ||
Comment 1•23 years ago
|
||
Comment 2•23 years ago
|
||
Discussed in edt bug triage. Plussing.
Comment 3•23 years ago
|
||
adt: nsbeta1+/adt2
Attachment #123929 -
Flags: review?(sgehani)
Attachment #123929 -
Flags: review?(sgehani) → review-
got r=sgehani for this patch.
Attachment #123929 -
Attachment is obsolete: true
Comment on attachment 124030 [details] [diff] [review]
patch v1.1
adding r=sgehani
seeking rs=
Attachment #124030 -
Flags: superreview?(jaggernaut)
Attachment #124030 -
Flags: review+
Attachment #124030 -
Flags: superreview?(jaggernaut) → superreview?(sspitzer)
Comment 7•23 years ago
|
||
Comment on attachment 124030 [details] [diff] [review]
patch v1.1
rs=sspitzer
a=sspitzer for 1.4 final
sorry for the delay, ssu.
Attachment #124030 -
Flags: superreview?(sspitzer)
Attachment #124030 -
Flags: superreview+
Attachment #124030 -
Flags: approval1.4+
patch updated after talk with jag.
Attachment #124030 -
Attachment is obsolete: true
one minor change
Attachment #124045 -
Attachment is obsolete: true
Comment 10•23 years ago
|
||
Comment on attachment 124046 [details] [diff] [review]
patch v1.3
sr=jag, carrying forward r= and a= since nothing really changed.
Attachment #124046 -
Flags: superreview+
Attachment #124046 -
Flags: review+
Attachment #124046 -
Flags: approval1.4+
| Assignee | ||
Comment 11•23 years ago
|
||
patch was checked in on 05/23/03
resolving bug as fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 12•23 years ago
|
||
Verified using the 20030613 1.4 build.
No longer crashes and correctly removes pathtoexe entries. Ran test case in the
bug along with a couple of others related to this area.
Status: RESOLVED → VERIFIED
Updated•18 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•