fixing bug 201412 - Uninstaller crashes removing pathtoexe entry. r=sgehani, sr=jag, a=sspitzer